# WMS_Test

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
wms/: alembic.ini  docker-compose.yml
wms/app/: main.py
wms/app/api/: router.py
wms/app/api/v1/: __init__.py  auth.py  carriers.py  customers.py  files.py  inbound.py  inventory.py  locations.py  logs.py  purchase.py  roles.py  sales.py  skus.py  suppliers.py  users.py  warehouses.py
wms/app/core/: config.py  deps.py  security.py
wms/app/db/: base.py  init.py  session.py
wms/app/models/: __init__.py  file.py  inventory.py  log.py  ops.py  order.py  org.py  product.py  rbac.py  user.py
wms/app/schemas/: common.py  file.py  inventory.py  ops.py  order.py  org.py  product.py  rbac.py  user.py
wms/app/services/: allocation.py  auth.py  carrier_client.py  inbound.py  inventory.py  picking.py  purchasing.py  rbac.py  shipping.py
wms/app/services/carrier_providers/: aggregator.py  fedex.py  ups.py  usps.py
wms/app/tasks/: celery_app.py  shipping.py
wms/app/utils/: oplog.py  pagination.py  s3.py
wms/docker/: api.Dockerfile  nginx.conf  worker.Dockerfile
wms/migrations/: env.py
wms/migrations/versions/: 0001_initial.py
wms/scripts/: seed.py
wms/tests/: test_health.py
