[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wms"
version = "0.1.0"
description = "Warehouse Management System"
authors = [{name = "WMS Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "redis",
    "celery",
    "structlog",
    "prometheus-fastapi-instrumentator",
    "python-multipart",
    "boto3",
    "minio",
    "loguru",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "factory_boy",
]

[tool.setuptools.packages.find]
where = ["wms"]

[tool.setuptools.package-dir]
"" = "wms"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "N", "S", "W", "C90"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
plugins = []
warn_unused_configs = true
warn_unused_ignores = true
strict = false
